@@ -1,11 +1,11 @@
 package com.mine.geometry_node.core.engine.graph.storage;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
-import com.mine.geometry_node.core.engine.blueprint.compile.BlueprintCompiler;
-import com.mine.geometry_node.core.engine.blueprint.runtime.RuntimeGraphIndex;
+import com.mine.geometry_node.core.engine.graph.GraphKind;
+import com.mine.geometry_node.core.engine.graph.GraphTypeRegistry;
+import com.mine.geometry_node.core.engine.graph.compile.CompiledGraph;
+import com.mine.geometry_node.core.engine.graph.compile.GraphCompilationService;
 import net.minecraft.resources.FileToIdConverter;
 import net.minecraft.resources.Identifier;
 import net.minecraft.server.packs.resources.ResourceManager;
@@ -22,16 +22,15 @@ import java.util.Set;
 /**
  * [资源管理器] 集成 Minecraft 数据包系统。
  * 负责监听数据包重载事件，读取 `data/[modid]/graphs/` 路径下的 JSON 文件，
- * 并将其编译为 {@link RuntimeGraphIndex}。
+ * 并按图族编译为对应的不可变运行时产物。
  */
 public class GraphResourceManager extends SimplePreparableReloadListener<Map<Identifier, JsonElement>> {
 
-    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().create();
     private static final String FOLDER_NAME = "graphs";
     private static GraphResourceManager INSTANCE;
 
     // 核心缓存：图 ID (Identifier) -> 运行时索引
-    private Map<String, RuntimeGraphIndex> indexCache = Collections.emptyMap();
+    private Map<String, GraphAssetDescriptor> graphCache = Collections.emptyMap();
 
     public GraphResourceManager() {
         INSTANCE = this;
@@ -44,13 +43,15 @@ public class GraphResourceManager extends SimplePreparableReloadListener<Map<Ide
         return INSTANCE;
     }
 
-    /**
-     * 根据 ID 获取图索引。
-     * @param graphId 格式： "modid:path/to/graph"
-     */
     @Nullable
-    public RuntimeGraphIndex getIndex(String graphId) {
-        return indexCache.get(graphId);
+    public GraphAssetDescriptor getGraph(String graphId) {
+        return graphCache.get(graphId);
+    }
+
+    @Nullable
+    public CompiledGraph getArtifact(String graphId, GraphKind runtimeKind) {
+        GraphAssetDescriptor descriptor = graphCache.get(graphId);
+        return descriptor != null && descriptor.runtimeKind() == runtimeKind ? descriptor.artifact() : null;
     }
 
     /**
@@ -74,16 +75,15 @@ public class GraphResourceManager extends SimplePreparableReloadListener<Map<Ide
 
     @Override
     protected void apply(Map<Identifier, JsonElement> object, ResourceManager resourceManager, ProfilerFiller profiler) {
-        Map<String, RuntimeGraphIndex> newCache = new HashMap<>();
+        Map<String, GraphAssetDescriptor> newCache = new HashMap<>();
 
         object.forEach((location, json) -> {
             try {
                 String graphId = location.toString();
 
-                try (java.io.Reader reader = new java.io.StringReader(json.toString())) {
-                    RuntimeGraphIndex index = BlueprintCompiler.compile(reader);
-                    newCache.put(graphId, index);
-                }
+                CompiledGraph artifact = GraphCompilationService.INSTANCE.compile(json.getAsJsonObject());
+                newCache.put(graphId, new GraphAssetDescriptor(graphId,
+                        GraphTypeRegistry.INSTANCE.require(artifact.graphTypeId()), artifact));
             } catch (Exception e) {
                 System.err.println("[GraphResourceManager]: Error parsing graph " + location);
                 e.printStackTrace();
@@ -91,14 +91,23 @@ public class GraphResourceManager extends SimplePreparableReloadListener<Map<Ide
         });
 
         // 缓存替换
-        this.indexCache = Map.copyOf(newCache);
-        System.out.println("[GraphResourceManager]: Loaded " + indexCache.size() + " graph(s).");
+        this.graphCache = Map.copyOf(newCache);
+        System.out.println("[GraphResourceManager]: Loaded " + graphCache.size() + " graph(s).");
     }
 
     /**
      * [前端/指令] 获取所有已加载图的 ID 列表。
      */
     public Set<String> getAllGraphIds() {
-        return Collections.unmodifiableSet(indexCache.keySet());
+        return Collections.unmodifiableSet(graphCache.keySet());
+    }
+
+    public Set<String> getGraphIds(GraphKind runtimeKind) {
+        if (runtimeKind == null || runtimeKind == GraphKind.UNKNOWN) return Set.of();
+        Set<String> result = new java.util.HashSet<>();
+        graphCache.forEach((graphId, descriptor) -> {
+            if (descriptor.runtimeKind() == runtimeKind) result.add(graphId);
+        });
+        return Collections.unmodifiableSet(result);
     }
 }
